:construction: added not valid tests #19 #20 #22